--- a/index.html
+++ b/index.html
@@ -271,6 +271,186 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-3 col-md-6 trending-item filter-exchange">
+            <div class="beasiswa-item">
+                <div class="img">
+                    <img src="assets/img/content/exchange01.jpg" alt="">
+                </div>
+                <div class="blog-content">
+                    <a href="assets/img/content/exchange01.jpg" data-gallery="trendingGallery"
+                        class="item-lightbox preview-link" title="App 10"><i
+                            class="las la-binoculars"></i></a>
+                    <h3>
+                        <a href="#">Romanians Goverment's Scholarship</a>
+                    </h3>
+                    <div class="category-item">
+                        <ul>
+                            <li class="exchange">Exchange</li>
+                        </ul>
+                    </div>
+                    <div class="text">
+                        Pemerintah Romania menyedikan student exchange bagi mahasiswa indonesia yang
+                        memiliki kriteria
+                    </div>
+                    <a href="#" class="main-button">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 trending-item filter-beasiswa">
+            <div class="beasiswa-item">
+                <div class="img">
+                    <img src="assets/img/content/bea02.jpg" alt="">
+                </div>
+                <div class="blog-content">
+                    <a href="assets/img/content/bea02.jpg" data-gallery="trendingGallery"
+                        class="item-lightbox preview-link" title="App 10"><i
+                            class="las la-binoculars"></i></a>
+                    <h3>
+                        <a href="#">BEASISWA S1 BCA FINANCE</a>
+                    </h3>
+                    <div class="category-item">
+                        <ul>
+                            <li class="beasiswa">Beasiswa</li>
+                        </ul>
+                    </div>
+                    <div class="text">
+                        Beasiswa BCA Finance salah satu program beasiswa S1 yang disediakan bagi mahasiswa
+                        di Indonesia. Kelebihannya, beasiswa terbuka untuk seluruh mahasiswa PTN/PTS di
+                        tanah air.
+                    </div>
+                    <a href="#" class="main-button">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 trending-item filter-lomba">
+            <div class="beasiswa-item">
+                <div class="img">
+                    <img src="assets/img/content/lomba01.jpeg" alt="">
+                </div>
+                <div class="blog-content">
+                    <a href="assets/img/content/lomba01.jpeg" data-gallery="trendingGallery"
+                        class="item-lightbox preview-link" title="Karya tulis Ilmiah Naisonal"
+                        data-description="LOMBA KARYA TULIS ILMIAH TINGKAT NASIONAL
+                        'Strategi Menjadi Mahasiswa Produktif di Masa Pandemi Covid 19'"><i
+                            class="las la-binoculars"></i></a>
+                    <h3>
+                        <a href="#">LOMBA KARYA TULIS ILMIAH TINGKAT NASIONAL</a>
+                    </h3>
+                    <div class="category-item">
+                        <ul>
+                            <li class="lomba">Lomba</li>
+                        </ul>
+                    </div>
+                    <div class="text">
+                        LOMBA KARYA TULIS ILMIAH TINGKAT NASIONAL
+                        "Strategi Menjadi Mahasiswa Produktif di Masa Pandemi Covid 19"
+                    </div>
+                    <a href="#" class="main-button">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 trending-item filter-seminar">
+            <div class="beasiswa-item">
+                <div class="img">
+                    <img src="assets/img/content/semi02.jpeg" alt="">
+                </div>
+                <div class="blog-content">
+                    <a href="assets/img/content/semi02.jpeg" data-gallery="trendingGallery"
+                        class="item-lightbox preview-link" title="App 10"><i
+                            class="las la-binoculars"></i></a>
+                    <h3>
+                        <a href="#">Women Empowerment</a>
+                    </h3>
+                    <div class="category-item">
+                        <ul>
+                            <li class="seminar">Seminar</li>
+                        </ul>
+                    </div>
+                    <div class="text">
+                        Hampir setengah populasi negara kita adalah perempuan, maka kita perlu memastikan
+                        bahwa perempuan Indonesia memiliki pengetahuan,...
+                    </div>
+                    <a href="#" class="main-button">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 trending-item filter-lomba">
+            <div class="beasiswa-item">
+                <div class="img">
+                    <img src="assets/img/content/lomba02.jpeg" alt="">
+                </div>
+                <div class="blog-content">
+                    <a href="assets/img/content/lomba02.jpeg" data-gallery="trendingGallery"
+                        class="item-lightbox preview-link" title="App 10"><i
+                            class="las la-binoculars"></i></a>
+                    <h3>
+                        <a href="#"> HMP PGSD UPY PROUDLY PRESENT (National Essay Competition)</a>
+                    </h3>
+                    <div class="category-item">
+                        <ul>
+                            <li class="lomba">Lomba</li>
+                        </ul>
+                    </div>
+                    <div class="text">
+                        Dalam rangka memperingati Hari Bumi 22 April 2021 HMP PGSD UPY mengadakan Lomba NEC
+                        (National Essay Competition)
+                    </div>
+                    <a href="#" class="main-button">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 trending-item filter-seminar">
+            <div class="beasiswa-item">
+                <div class="img">
+                    <img src="assets/img/content/semi03.jpeg" alt="">
+                </div>
+                <div class="blog-content">
+                    <a href="assets/img/content/semi03.jpeg" data-gallery="trendingGallery"
+                        class="item-lightbox preview-link" title="App 10"><i
+                            class="las la-binoculars"></i></a>
+                    <h3>
+                        <a href="#">Webinar Nasional Ekonomi Kreatif dan Pariwisata 2021</a>
+                    </h3>
+                    <div class="category-item">
+                        <ul>
+                            <li class="seminar">Seminar</li>
+                        </ul>
+                    </div>
+                    <div class="text">
+                        [Webinar Nasional Ekonomi Kreatif dan Pariwisata 2021] "Membangun ulang Ekonomi
+                        Pasca Pandemi dengan Pariwisata dan Ekonomi..
+                    </div>
+                    <a href="#" class="main-button">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 trending-item filter-seminar">
+            <div class="beasiswa-item">
+                <div class="img">
+                    <img src="assets/img/content/semi02.jpeg" alt="">
+                </div>
+                <div class="blog-content">
+                    <a href="assets/img/content/semi02.jpeg" data-gallery="trendingGallery"
+                        class="item-lightbox preview-link" title="App 10"><i
+                            class="las la-binoculars"></i></a>
+                    <h3>
+                        <a href="#">TALKSHOW INVESTMENT NASIONAL</a>
+                    </h3>
+                    <div class="category-item">
+                        <ul>
+                            <li class="seminar">Seminar</li>
+                        </ul>
+                    </div>
+                    <div class="text">
+                        📢 [TALKSHOW INVESTMENT NASIONAL] 📢
+                        : "Investment, Millenial's Way of Saving"
+                        Pandemi bikin pendapatan yang masuk sedikit? terus bingung mau diapain?
+                        Yuk #belajarinvestasi!!
+                    </div>
+                    <a href="#" class="main-button">Read More</a>
+                </div>
+            </div>
+        </div>
         </div>
 
       </div>
