--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 trending-item filter-exchange">
-            <div class="beasiswa-item">
+            <div class="item">
                 <div class="img">
                     <img src="assets/img/content/exchange01.jpg" alt="">
                 </div>
@@ -297,7 +297,7 @@
             </div>
         </div>
         <div class="col-lg-3 col-md-6 trending-item filter-beasiswa">
-            <div class="beasiswa-item">
+            <div class="item">
                 <div class="img">
                     <img src="assets/img/content/bea02.jpg" alt="">
                 </div>
@@ -323,7 +323,7 @@
             </div>
         </div>
         <div class="col-lg-3 col-md-6 trending-item filter-lomba">
-            <div class="beasiswa-item">
+            <div class="item">
                 <div class="img">
                     <img src="assets/img/content/lomba01.jpeg" alt="">
                 </div>
@@ -350,7 +350,7 @@
             </div>
         </div>
         <div class="col-lg-3 col-md-6 trending-item filter-seminar">
-            <div class="beasiswa-item">
+            <div class="item">
                 <div class="img">
                     <img src="assets/img/content/semi02.jpeg" alt="">
                 </div>
@@ -375,7 +375,7 @@
             </div>
         </div>
         <div class="col-lg-3 col-md-6 trending-item filter-lomba">
-            <div class="beasiswa-item">
+            <div class="item">
                 <div class="img">
                     <img src="assets/img/content/lomba02.jpeg" alt="">
                 </div>
@@ -400,7 +400,7 @@
             </div>
         </div>
         <div class="col-lg-3 col-md-6 trending-item filter-seminar">
-            <div class="beasiswa-item">
+            <div class="item">
                 <div class="img">
                     <img src="assets/img/content/semi03.jpeg" alt="">
                 </div>
@@ -425,7 +425,7 @@
             </div>
         </div>
         <div class="col-lg-3 col-md-6 trending-item filter-seminar">
-            <div class="beasiswa-item">
+            <div class="item">
                 <div class="img">
                     <img src="assets/img/content/semi02.jpeg" alt="">
                 </div>
