--- a/index.html
+++ b/index.html
@@ -29,12 +29,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Reveal - v4.1.0
-  * Template URL: https://bootstrapmade.com/reveal-bootstrap-corporate-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -98,7 +92,7 @@
   <!-- ======= hero Section ======= -->
   <section id="hero">
 
-    <div class="hero-content" data-aos="fade-up">
+    <div class="hero-content">
       <h2>Making Your <span>Future Life</span><br>Brighter!</h2>
       <div>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
