--- a/category.html
+++ b/category.html
@@ -468,7 +468,7 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>BuMI</strong>. All Rights Reserved
+                &copy; 2021Copyright <strong>BuMI</strong>. All Rights Reserved
             </div>
             <!-- <div class="credits">
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
