--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Reveal</strong>. All Rights Reserved
+        &copy; 2021 Copyright <strong>BUMI</strong>. All Rights Reserved
       </div>     
     </div>
   </footer><!-- End Footer -->
