--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Trending</h2>
-          <p>Bersama kami temukan beasiswa-beasiswa impianmu</p>
+          <p><b>Bersama kami temukan beasiswa-beasiswa impianmu<b></p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="50">
