--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="member">
-            <div class="pic"><img src="assets/img/team-3.jpg" alt=""></div>
+            <div class="pic"><img src="assets/img/team/team3.jpg" alt=""></div>
             <div class="details">
               <h4>Ivan Maulana <br>Arrasid</h4>
               <span>CTO</span>
