--- a/login.html
+++ b/login.html
@@ -98,7 +98,7 @@
 			<div class="form-group">
 				<a class="btn btn-primary btn-lg btn-block" href="https://admin-bumi-id.herokuapp.com/">Sign In</a>
 			</div>
-			<p><a href="#">Lost your Password?</a></p>
+			<p><a href="#">Forget your Password?</a></p>
 			<p><a href="https://bumi-id.herokuapp.com">Home</a></p>
 		</form>
 		<p class="text-center small">Don't have an account? <a href="#">Sign up here!</a></p>
