--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
 		.login-form .btn {
 			font-size: 16px;
 			font-weight: bold;
-			background: #3598dc;
+			background: #21aeb5;
 			border: none;
 			outline: none !important;
 		}
